--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
                 </div>
                 <div class="col">
 
-
-                    <h1>NuCamp</h1>
+                  <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
+
+                </div>
+
+                <div class="col-md-4 col-xl-2 m-4 align-self-center">
+
+                    <a role="button" class="btn btn-info text-light text-nowrap btn-lg" href="#reserveForm">Reserve
+                        Campsite</a>
 
                 </div>
             </div>
         </div>
-
 
     </header>
 
@@ -54,7 +59,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>
                         Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                <li class="nav-item"><a class="nav-link " href="aboutus.html"><i class="fa fa-info fa-lg"></i>
                         About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>
@@ -70,17 +75,20 @@
     <div class="container">
         <div class="row row-content align-items-center">
 
+
+
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right"> Discover & Review</h2>
             </div>
             <div class="col">
                 <div class="media">
+
                     <img class="d-flex mr-3 img-thumbnail" src="/img/breadcrumb-trail-thumb.jpg"
                         alt="breadcrumb-trail-thumb" />
+
                     <div class="media-body align-self-center" <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
-                            own
-                            reviews!</p>
+                        <p class="d-none d-sm-block ">Explore our growing database of curated campsites and leave your
+                            own reviews!</p>
                     </div>
                 </div>
             </div>
@@ -91,12 +99,21 @@
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on
-                    the
-                    shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div class="media">
+                    <div class="media-body align-self-center">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
+                            on
+                            the
+                            shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>
+
+                    <img class="d-flex ml-3 img-thumbnail" src="/img/react-lake-thumb.jpg" alt="react-lake-thumb" />
+
+                </div>
             </div>
         </div>
+
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
@@ -104,17 +121,83 @@
             </div>
             <div class="col">
                 <div class="media">
-                    <img src="/img/bootstrap-thumb.png" class="d-flex mr-3 img-thumbnail"/>
+                    <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
                     <div class="media-body align-self-center">
-                <h3>Bootstrap Outfitters</h3>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you
-                    can't beat.</p>
-            </div>
-            </div>
+                        <h3>Bootstrap Outfitters</h3>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
+                            can't beat.</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
+        <div class="row row-content align-items-center">
+            <div class=" col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info text-light">Reserve a campsite</h3>
+
+                    <div class="card-body">
+                        <form id="reserveForm">
+                            <div class="form-group row">
+                                <div class="col col-sm-6">
+                                    <label for="numCampers" class="col-form-label">Number of Campers</label>
+                                </div>
+                                <div class="col-sm">
+
+                                    <select class="col-md-6 " name="Camno" id="numCampers">
+                                        <option>Select</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                    </select>
+                                </div>
+
+
+                            </div>
+
+                            <div class="form-group row">
+
+                                <div class="col-sm-6 ">
+                                    <label for="date1" class="col-form-label"> Date</label>
+                                </div>
+
+
+                                <div class="col col-sm-6">
+                                    <input class="form-control" type="date" id="date1" name="date"
+                                        placeholder="Enter date" />
+                                </div>
+                            </div>
+
+
+                            <div class="form-group row">
+
+                                <div class="col">
+
+                                    <button type="submit" class=" btn btn-primary">Search
+
+                                    </button>
+                                </div>
+
+
+
+
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+
+    </div>
+    </div>
     <footer>
         <div class="container">
             <div class="row">
