--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="jumbotron jumbotron-fluid ">
         <div class="container-md">
             <div class="row">
-                <div class="col-sm-2 col-md-3 align-self-center">
+                <div class="col-sm-2 col-md-2 align-self-center">
                     <a href="#">
                         <img src="/img/logo.png" class="img-fluid" />
                     </a>
@@ -210,7 +210,7 @@
                             shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
 
-                    <img class="d-flex ml-3 img-thumbnail" src="/img/react-lake-thumb.jpg" alt="react-lake-thumb" />
+                    <img  style="border-radius: 50;"   class="d-flex ml-3 img-thumbnail" src="/img/react-lake-thumb.jpg" alt="react-lake-thumb" />
 
                 </div>
             </div>
