--- a/index_new.html
+++ b/index_new.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/Styles_new.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
 
@@ -31,13 +31,13 @@
                 </div>
                 <div class="col">
 
-                  <h1>NuCamp</h1>
+                  <h1 class="font- font-weight-bolder">NuCamp</h1>
                     <h2>a better way to camp</h2>
 
                 </div>
 
                 <div class="col-md-4 col-xl-2 m-4 align-self-center">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-light btn-linkedin " data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
 
                    
 
@@ -57,17 +57,17 @@
         <div class="collapse navbar-collapse" id="navCol">
 
             <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>
+                <li class="nav-item active"><a class="nav-link btn-facebook" href="index.html"><i class="fa fa-home fa-lg"></i>
                         Home</a></li>
-                <li class="nav-item"><a class="nav-link " href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                <li class="nav-item"><a class="nav-link btn-facebook " href="aboutus.html"><i class="fa fa-info fa-lg"></i>
                         About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>
+                <li class="nav-item"><a class="nav-link btn-facebook" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                <li class="nav-item"><a class="nav-link btn-facebook" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>
                         Contact</a></li>
             </ul>
 
             <span class="navbar-text ml-auto">
-             <a role= "button" data-toggle="modal" data-target="#LoginModal">
+             <a class="btn-facebook" role= "button" data-toggle="modal" data-target="#LoginModal">
                  <i class="fa fa-sign-in"></i>Login
              </a>
 
@@ -82,7 +82,7 @@
     <div id="LoginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header modalhead">
                     <h3 class="modal-title">Login</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -132,10 +132,10 @@
 
 
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb-trail"/>
+                            <img class="d-block w-100 " src="img/breadcrumb-trail.jpg" alt="Breadcrumb-trail"/>
                             <div class="carousel-caption">
                                 <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                                <p class="d-none d-sm-block font-weight-bold">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
                             </div>
                         </div>
 
@@ -185,10 +185,10 @@
             <div class="col">
                 <div class="media">
 
-                    <img class="d-flex mr-3 img-thumbnail" src="/img/breadcrumb-trail-thumb.jpg"
+                    <img class="d-flex mr-3 img-thumbnail img1 " src="/img/breadcrumb-trail-thumb.jpg"
                         alt="breadcrumb-trail-thumb" />
 
-                    <div class="media-body align-self-center" <h3>Our Campsites</h3>
+                    <div class="media-body align-self-center" ><h2>Our Campsites</h2>
                         <p class="d-none d-sm-block ">Explore our growing database of curated campsites and leave your
                             own reviews!</p>
                     </div>
@@ -203,14 +203,14 @@
             <div class="col">
                 <div class="media">
                     <div class="media-body align-self-center">
-                        <h3>React Lake Campground</h3>
+                        <h2>React Lake Campground</h2>
                         <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
                             on
                             the
                             shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
 
-                    <img class="d-flex ml-3 img-thumbnail" src="/img/react-lake-thumb.jpg" alt="react-lake-thumb" />
+                    <img class="d-flex ml-3 img-thumbnail img1 " src="/img/react-lake-thumb.jpg" alt="react-lake-thumb" />
 
                 </div>
             </div>
@@ -223,7 +223,7 @@
             </div>
             <div class="col">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+                    <img class="d-flex mr-3 img-thumbnail img1 " src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
                     <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
                         <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
@@ -236,17 +236,17 @@
         <div class="row row-content align-items-center">
             <div class=" col-sm-6 mx-auto">
                 <div class="card">
-                    <h3 class="card-header bg-info text-light">Reserve a campsite</h3>
+                    <h3 class="card-header text-light cardhead">Reserve a campsite</h3>
 
-                    <div class="card-body">
+                    <div class="card-body colou">
                         <form id="reserveForm">
                             <div class="form-group row">
                                 <div class="col col-sm-6">
-                                    <label for="numCampers" class="col-form-label">Number of Campers</label>
+                                    <label for="numCampers" class="col-form-label text-light font-weight-bolder">Number of Campers</label>
                                 </div>
                                 <div class="col-sm">
 
-                                    <select class="col-md-6 " name="Camno" id="numCampers">
+                                    <select class="col-md-6 form-rounded " name="Camno" id="numCampers">
                                         <option>Select</option>
                                         <option>1</option>
                                         <option>2</option>
@@ -263,12 +263,12 @@
                             <div class="form-group row">
 
                                 <div class="col-sm-6 ">
-                                    <label for="date1" class="col-form-label"> Date</label>
+                                    <label for="date1" class="col-form-label text-light font-weight-bolder"> Date</label>
                                 </div>
 
 
                                 <div class="col col-sm-6">
-                                    <input class="form-control" type="date" id="date1" name="date"
+                                    <input class="form-control form-rounded" type="date" id="date1" name="date"
                                         placeholder="Enter date" />
                                 </div>
                             </div>
@@ -306,10 +306,10 @@
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a class="footertext" href="#">Home</a></li>
+                        <li><a class="footertext" href="aboutus.html">About</a></li>
+                        <li><a class="footertext" href="#">Sites</a></li>
+                        <li><a class="footertext" href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
@@ -324,9 +324,9 @@
                             class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                    <a role="button" class="btn btn-link footertext " href="tel:+12065551234"><i class="fa fa-phone"></i>
                         1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                    <a role="button" class="btn btn-link footertext" href="mailto:campsites@nucamp.co"><i
                             class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
