--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
                     </a>
 
 
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"></i>
+                    </button>
+
+
+
+
+
 
                 </div>
             </div>
@@ -365,8 +373,22 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
+    <script>
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                    $(".carousel").carousel("pause");
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
+                    $(".carousel").carousel("cycle");
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause"); 
+                }
+            });
+        });
     </script>
-
 </body>
 
 
